--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
-# Bubble + PaymentAPI Entegrasyon Kılavuzu
-
-## 1. API Connector Ekleme
-- Plugin → API Connector → "PaymentAPI"
-- Base URL: `https://your-api-url.com` (şimdilik `http://localhost:3000`)
-
-## 2. Endpoint'leri Tanımla
-- **Create Payment** (POST /api/payments/create)
-- **Check Status** (GET /api/payments/:id/status)
-
-## 3. Workflow Oluştur
-- Buton tıklandığında: "Create Payment" çağır
-- Gelen `payment_url`'e yönlendir
-- Ödeme sonrası durumu kontrol et
+{
+  "name": "payment-api",
+  "version": "1.0.0",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
+}
