Db connection has been added.

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 NODE_ENV=development
+MONGO_URI=mongodb+srv://mberkaydemirhan_db_user:sBpD79UUj1c6LyXt@cluster1.lpv9feu.mongodb.net/payment-api?appName=Cluster1
