--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
     "helmet": "^7.2.0",
+    "iyzipay": "^2.0.64",
     "mongoose": "^8.19.3",
     "node-fetch": "^2.7.0"
   },
