--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "iyzipay": "^2.0.64",
     "mongoose": "^8.19.3",
     "node-fetch": "^2.7.0",
+    "stripe": "^19.3.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
