--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
     "helmet": "^7.2.0",
+    "hpp": "^0.2.3",
     "iyzipay": "^2.0.64",
     "mongoose": "^8.19.3",
+    "mongoose-field-encryption": "^7.0.1",
     "node-fetch": "^2.7.0",
     "stripe": "^19.3.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "xss-clean": "^0.1.4",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
