--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose-field-encryption": "^7.0.1",
     "node-fetch": "^2.7.0",
     "stripe": "^19.3.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0",
     "xss-clean": "^0.1.4",
     "zod": "^4.1.12"
