--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,14 +6,15 @@
   "background_color": "#0f111a",
   "theme_color": "#6366f1",
   "description": "Secure Payment Gateway Developer Console",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/10479/10479959.png",
+      "src": "[https://cdn-icons-png.flaticon.com/512/10479/10479959.png](https://cdn-icons-png.flaticon.com/512/10479/10479959.png)",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/10479/10479959.png",
+      "src": "[https://cdn-icons-png.flaticon.com/512/10479/10479959.png](https://cdn-icons-png.flaticon.com/512/10479/10479959.png)",
       "sizes": "512x512",
       "type": "image/png"
     }
